@@ -2,6 +2,7 @@ from Provider import *
 from urllib import quote
 from Utilities import _info
 
+import time
 
 class BasicProvider( Provider ):
 
@@ -10,6 +11,9 @@ class BasicProvider( Provider ):
         emails = ["<a href='mailto:%s'>%s</a>"%( email, email ) for email in self.person.emails()]
         if emails:
             self.atoms.append("<p>" + ", ".join(emails) + "</p>" )
+            
+        if self.person.birthday():
+            self.atoms.append("<p>Born %s</p>"%time.strftime("%B %d", self.person.birthday()))
 
         addresses = self.person.addresses()
         if len(addresses) > 0:
@@ -23,4 +27,4 @@ class BasicProvider( Provider ):
             self.atoms.append("<p>" + "<br>".join(map(lambda url: "<a href='%s'>%s</a>"%(url, url), self.person.urls())) + "</p>")
         
         self.changed()
-    
+
