@@ -11,7 +11,7 @@ body {
     overflow: hidden;
 }
 
-p, img {
+p, img, pre {
     margin: 5px 0 0 5px;
 }
 
