@@ -40,10 +40,18 @@ Shelf now stops correctly when quit. oops.
 ### 0.0.11 (in development)
 
 Feed provider now displays the first 10 words of the blog entry under the
-heading.
+heading, and the entry date.
 
 Use urllib2 to get urls - this lets me do the right thing for feeds that
 need authentication.
 
-Cache now persists between runs. Maybe.
+<strike>Cache now persists between runs. Maybe.</strike> Nope, doesn't work very well.
 
+Add 'birthday' to the list of simple information displayed about a user
+
+Trunk currently contains experimental Google Social Graph code. This is
+possibly bad - (a) it blocks the discovery thread, so I need to re-arch to
+have a non-blocking extractor. But more seriously, (b) it sends every url
+you look at, every feed url you look at, and the homepages of everyone you get
+tweets from, to google. Bad? Probably. So this needs to be a preference. It
+also _really_ needs caching.
